--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "Shannon Code",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.1"
+    "bitcore": "^0.12.15",
+    "buffer-alloc": "^1.1.0",
+    "buffer-concat": "^1.0.0",
+    "express": "^4.14.1",
+    "sodium-native": "^1.5.1",
+    "tape": "^4.6.3"
   }
 }
